--- a/app/code/Gradus/InTheBox/view/adminhtml/layout/catalog_product_new.xml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/layout/catalog_product_new.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Gradus_TechSpecs::css/techspec.css" />
+        <css src="Gradus_Catalog::css/fields.css" />
     </head>
     <body>
         <referenceBlock name="product_form">
