--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -3,7 +3,7 @@ $tech = $this->getProduct()->getData('in_the_box');
 $info = json_decode($tech, true);
 $count = 1;
 ?>
-<div id="in_the_box_container" style="width:900px; margin:auto;">
+<div id="in_the_box_container">
     <?php if (count($info) > 0) : ?>
     <?php foreach ($info as $i) : ?>
             <?php if (!is_null($i)) : ?>
@@ -12,7 +12,7 @@ $count = 1;
         <label class="gradus_label" for="in_the_box_amonut_<?= $count ?>">Amount</label>
         <input class="gradus_text_mini" id="in_the_box_amonut_<?= $count ?>" value="<?= $i['count'] ?>" />
         <label class="gradus_label" for="in_the_box_value_<?= $count ?>">Item</label>
-        <input class="gradus_text_medium" style="width:63%" id="in_the_box_value_<?= $count ?>" value="<?= $i['value'] ?>" />
+        <input class="gradus_text_medium" style="width:70%" id="in_the_box_value_<?= $count ?>" value="<?= $i['value'] ?>" />
         <a src="javascript:void(0)" onclick="deleteinthebox('in_the_box_<?= $count ?>')">
             <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
         </a>
@@ -65,15 +65,19 @@ $count = 1;
     });
     function addinthebox()
     {
-        var counts = $q('#in_the_box_container input').length;
+        var counts = $q('#in_the_box_container .draggable-handle').length;
         var clb = counts+1;
+        var q = '';
+        q += '<div style="margin:auto" class="gradus_fields" id="in_the_box_'+clb+'">';
+        q += ' <div class="draggable-handle"><b>'+clb+'</b></div>';
+        q += '<label class="gradus_label" for="in_the_box_amonut_'+clb+'">Amount</label>';
+        q += '<input class="gradus_text_mini" id="in_the_box_amonut_'+clb+'" value="" />';
+        q += '<label class="gradus_label" for="in_the_box_value_'+clb+'">Item</label>';
+        q += '<input class="gradus_text_medium" style="width:70%" id="in_the_box_value_'+clb+'" value="" />';
+        q += '<a src="javascript:void(0)" onclick="deleteinthebox(\'in_the_box_'+clb+'\')">';
+        q += '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
         $q('#in_the_box_container').append
-        ('<div class="in_the_box_row" id="in_the_box_'+counts+'"><div class="draggable-handle"></div>' +
-            '<label for=-"in_the_box_value'+counts+'">In The Box '+clb+'</label>' +
-            '<input id="in_the_box_value_'+counts+'" style="width:30%;" data-form-part=\'product_form\' name=\'in_the_box['+clb+'][value]\' />' +
-            '<label for=-"in_the_box_count_'+counts+'">Amount '+clb+'</label>' +
-            '<input id="in_the_box_count_'+counts+'" style="width:30%;" data-form-part=\'product_form\' name=\'in_the_box['+clb+'][count]\' />' +
-            "<a class=\"delete_icon\" src=\"javascript:void(0)\" onclick=\"deleteinthebox('in_the_box_"+counts+"')\"></a><br/></div>");
+        (q);
     }
 
     function deleteinthebox(h)
